[vfs] concurrency issues in `VfsEventGenerationHelper` (IDEA-298457)
GitOrigin-RevId: ed589b9386d8bc1c0bf3eb1b1a69920d6d2f7c0e